2000-05-19  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/gnome/reconcile-list.c: use Queries to get the splits so
	we can do sorting. Add an api call to change the sort order.

	* src/engine/Query.c (xaccAmountMatchPredicate): debits are
	positive, credits are negative.

	* Makefile.in: install files and directories one at a time. If the
	user does not have an install script, the one supplied in the
	gnucash distribution can only handle one file at a time.

	* src/engine/util.c (xaccParseAmount): allow negative sign to be
	at the front or back of the amount.

2000-05-18  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/gnome/window-reconcile.c: make the finish button sensitivity
	depend on whether the reconciliation is balanced.

	* src/register/gnome/gnucash-sheet.c
	(gnucash_sheet_activate_cursor_cell): if the callback changes the
	value, redraw.

2000-05-17  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/engine/Query.c: allow sorting by reconciled date and
	reconcile status.

	* src/gnome/window-reconcile.c: add a 'statement date' to the
	reconciliation date. This date is used to set all the reconcile
	dates of the splits that get reconciled.

	* src/engine/Transaction.c (xaccSplitSetReconcile): don't change
	the reconcile date when the reconcile status is changed.

2000-05-18  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/transaction-report-2.scm: Fixed *some* of the
	bugs with two-column balance displays.

2000-05-17  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/gnome/window-reconcile.c (gnc_recn_create_tool_bar): add a
	'Finish' reconcile button to the toolbar.

	* src/register/splitreg.c (configLabels): use callbacks to get
	debit/credit headings.

	* src/guile/guile-util.c: new functions to access guile
	debit/credit synonyms by account type.

	* src/scm/prefs.scm: added debit/credit synonym configuration.

2000-05-16  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/engine/guid/guid.h: change the GUID struct to a union with