@@ -562,6 +562,11 @@ gnc_reconcile_list_set_sort_order(GNCReconcileList *list, sort_type_t key)
   xaccQuerySetSortOrder(list->query, key,
                         (key == BY_STANDARD) ? BY_NONE : BY_STANDARD,
                         BY_NONE);
+
+  if (list->list_type == RECLIST_DEBIT)
+    return;
+
+  xaccQuerySetSortIncreasing(list->query, !(key == BY_AMOUNT));
 }
 
 static void
