@@ -545,12 +545,14 @@
 #define COMMIT_STR          _("Commit")
 #define CREATE_STR          _("Create")
 #define CREDIT_STR          _("Credit")
-#define CREDITS_STR         _("Credits")
+#define CREDITS_STR_N      N_("Credits")
+#define CREDITS_STR         _(CREDITS_STR_N)
 #define CURRENCY_STR        _("Currency")
 #define DATE_STR            _("Date")
 #define DAYS_STR            _("Days")
 #define DEBIT_STR           _("Debit")
-#define DEBITS_STR          _("Debits")
+#define DEBITS_STR_N       N_("Debits")
+#define DEBITS_STR          _(DEBITS_STR_N)
 #define DECREASE_STR        _("Decrease")
 #define DEFICIT_STR         _("Deficit")
 #define DELETE_STR_N       N_("Delete")
